Fix for authentication by using cli sts assume-role, ugly but functional

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -4,6 +4,6 @@ FROM python:3-alpine
 WORKDIR /app
 COPY . .
 RUN pip install --no-cache-dir flask requests
-RUN apk update && apk add aws-cli kubectl
+RUN apk update && apk add aws-cli kubectl jq
 EXPOSE 5000
 CMD ["python", "weather.py"]
