--- a/k8s/jenkins.yaml
+++ b/k8s/jenkins.yaml
@@ -18,7 +18,6 @@ controller:
 
   serviceAnnotations:
     service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
-    service.beta.kubernetes.io/aws-load-balancer-name: a4438c17479c04fc5af7062ddd7b68ff
 
   additionalPlugins:
     - job-dsl:1.77
@@ -61,18 +60,22 @@ controller:
                                 imagePullPolicy: Always
                                 command:
                                 - cat
-                                tty: true'''
+                                tty: true
+                                '''
                           }
-                        }
-                        environment {
-                          AWS_ROLE_ARN = "arn:aws:iam::909307856304:role/k8s-testing"
                         }
                         stages {
                           stage('Push De Button') {
                             steps {
                               container('weather') {
-                                sh 'aws eks update-kubeconfig --region us-east-2 --name container-sorcerer-dev'
-                                sh 'kubectl apply -f /app/deployment.yaml'
+                                sh '''
+                                  aws sts assume-role --role-arn "arn:aws:iam::909307856304:role/k8s-testing" --role-session-name "jenkins-agent" > /tmp/sts.json
+                                  export AWS_ACCESS_KEY_ID=$(jq -r '.Credentials.AccessKeyId' /tmp/sts.json)
+                                  export AWS_SECRET_ACCESS_KEY=$(jq -r '.Credentials.SecretAccessKey' /tmp/sts.json)
+                                  export AWS_SESSION_TOKEN=$(jq -r '.Credentials.SessionToken' /tmp/sts.json)                                  
+                                  aws eks update-kubeconfig --region us-east-2 --name container-sorcerer-dev
+                                  kubectl apply -f /app/deployment.yaml
+                                '''
                               }
                             }
                           }
