--- a/k8s/jenkins.yaml
+++ b/k8s/jenkins.yaml
@@ -70,9 +70,9 @@ controller:
                               container('weather') {
                                 sh '''
                                   aws sts assume-role --role-arn "arn:aws:iam::909307856304:role/k8s-testing" --role-session-name "jenkins-agent" > /tmp/sts.json
-                                  export AWS_ACCESS_KEY_ID=$(jq -r '.Credentials.AccessKeyId' /tmp/sts.json)
-                                  export AWS_SECRET_ACCESS_KEY=$(jq -r '.Credentials.SecretAccessKey' /tmp/sts.json)
-                                  export AWS_SESSION_TOKEN=$(jq -r '.Credentials.SessionToken' /tmp/sts.json)                                  
+                                  export AWS_ACCESS_KEY_ID=\$(jq -r '.Credentials.AccessKeyId' /tmp/sts.json)
+                                  export AWS_SECRET_ACCESS_KEY=\$(jq -r '.Credentials.SecretAccessKey' /tmp/sts.json)
+                                  export AWS_SESSION_TOKEN=\$(jq -r '.Credentials.SessionToken' /tmp/sts.json)                                  
                                   aws eks update-kubeconfig --region us-east-2 --name container-sorcerer-dev
                                   kubectl apply -f /app/deployment.yaml
                                 '''
